Add new navigation groups and links for Thresholds and Health
Introduced two new navigation groups: 'Thresholds' and 'Health', each containing multiple new links for better navigation. This enhancement aims to organize and improve accessibility to threshold and health-related pages.

--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -3,6 +3,14 @@
     <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
     <MudNavLink Href="counter" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Counter</MudNavLink>
     <MudNavLink Href="weather" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Weather</MudNavLink>
+    <MudNavGroup Title="Thresholds" Icon="@Icons.Material.Filled.TableView">
+        <MudNavLink Href="thresholds" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.TableView">API Hist Details</MudNavLink>
+        <MudNavLink Href="ApiResults" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.TableView">Data Table Example</MudNavLink>
+        <MudNavLink Href="DataGridExample" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.TableView">Data Grid Exammple</MudNavLink>
+        <MudNavLink Href="Graphs" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.MultilineChart">Charting</MudNavLink>
+    </MudNavGroup>
+    <MudNavGroup Title="Health" Icon="@Icons.Material.Filled.AlarmOn">
+        <MudNavLink Href="onoff" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.AlarmOn">Health Hist Details</MudNavLink>
+        <MudNavLink Href="onoff" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.AlarmOn">Health Trends</MudNavLink>
+    </MudNavGroup>
 </MudNavMenu>
-
-
