--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,11 +1,11 @@
 ﻿
 <MudNavMenu>
     <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
-    <MudNavLink Href="fetchdata" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Counter</MudNavLink>
+    <MudNavLink Href="fetchdata" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Fetch DB Data</MudNavLink>
     <MudNavLink Href="weather" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Weather</MudNavLink>
     <MudNavGroup Title="Thresholds" Icon="@Icons.Material.Filled.TableView">
         <MudNavLink Href="thresholds" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.TableView">API Hist Details</MudNavLink>
-        <MudNavLink Href="ApiResults" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.TableView">Data Table Example</MudNavLink>
+        <MudNavLink Href="CollectedDataGrid" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.TableView">Data Table Example</MudNavLink>
         <MudNavLink Href="DataGridExample" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.TableView">Data Grid Exammple</MudNavLink>
         <MudNavLink Href="Graphs" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.MultilineChart">Charting</MudNavLink>
     </MudNavGroup>
