--- a/Components/Pages/CollectedDataGrid.razor
+++ b/Components/Pages/CollectedDataGrid.razor
@@ -11,17 +11,18 @@
              Hideable="true" RowClick="@RowClicked"
              RowContextMenuClick="RowRightClicked"
              SelectedItemsChanged="@SelectedItemsChanged"
+             MultiSelection="false"
              >
     <ToolBarContent>
         <MudText Typo="Typo.h6">Api Result Data Grid</MudText>
         <MudSpacer />
-        <MudTextField @bind-Value="_searchString" Placeholder="Search" Adornment="Adornment.Start" Immediate="true"
-            AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
+        @*<MudTextField @bind-Value="_searchString" Placeholder="Search" Adornment="Adornment.Start" Immediate="true"
+            AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>*@
     </ToolBarContent>
     <Columns>
         <SelectColumn T="Collectedapidatum" />
-        <PropertyColumn Property="x => x.Id" Title="Id" Sortable="false" Filterable="false" />
-        <PropertyColumn Property="x => x.ApiName" Title="Api" SortBy="@_sortBy"/>
+        <PropertyColumn Property="x => x.Id" Title="Id" Sortable="false" Filterable="false" Hidden="true" />
+        <PropertyColumn Property="x => x.ApiName" Title="Api" />
         <PropertyColumn Property="x => x.Type" Title="Type" />
         <PropertyColumn Property="x => x.Threshold" Title="Threshold" />
         <PropertyColumn Property="x => x.Value" Title="Value" />
@@ -36,7 +37,7 @@
         <PropertyColumn Property="x => x.Minute" Title="Min" />
         <PropertyColumn Property="x => x.Note" Title="Notes" />
         <PropertyColumn Property="x => x.ErrorDetails" Title="Errors" />
-        <PropertyColumn Property="x => x.JsonResponse" Title="Raw Response" />
+        <PropertyColumn Property="x => x.JsonResponse" Title="Raw Response" Filterable="false" Sortable="false"/>
 
     </Columns>
     <PagerContent>
@@ -64,11 +65,6 @@
     private List<Collectedapidatum> _statuses = new List<Collectedapidatum>();
     private string _searchString = string.Empty;
     private List<string> _events = new();
-
-    private Func<Collectedapidatum, object> _sortBy => x =>
-    {
-            return x.ApiName;
-    };
 
     // quick filter - filter globally across multiple columns with the same input
     private Func<Collectedapidatum, bool> QuickFilter => x =>
