--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,15 +1,15 @@
 ﻿
 <MudNavMenu>
     <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
-    <MudNavLink Href="fetchdata" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Fetch DB Data</MudNavLink>
-    <MudNavLink Href="weather" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Weather</MudNavLink>
+    @*<MudNavLink Href="fetchdata" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Fetch DB Data</MudNavLink>
+    <MudNavLink Href="weather" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Weather</MudNavLink>*@
     <MudNavGroup Title="Thresholds" Icon="@Icons.Material.Filled.TableView">
-        <MudNavLink Href="thresholds" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.TableView">API Hist Details</MudNavLink>
+        @*<MudNavLink Href="thresholds" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.TableView">API Hist Details</MudNavLink>*@
         <MudNavLink Href="CollectedDataGrid" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.TableView">Data Table Example</MudNavLink>
-        <MudNavLink Href="DataGridExample" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.TableView">Data Grid Exammple</MudNavLink>
+        @*<MudNavLink Href="DataGridExample" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.TableView">Data Grid Exammple</MudNavLink>*@
         <MudNavLink Href="Graphs" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.MultilineChart">Charting</MudNavLink>
     </MudNavGroup>
-    <MudNavGroup Title="Health" Icon="@Icons.Material.Filled.AlarmOn">
+    <MudNavGroup Title="Running" Icon="@Icons.Material.Filled.AlarmOn">
         <MudNavLink Href="onoff" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.AlarmOn">Health Hist Details</MudNavLink>
         <MudNavLink Href="onoff" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.AlarmOn">Health Trends</MudNavLink>
     </MudNavGroup>
