Add CollectedDataGraph page and update NavMenu links
Implemented a new CollectedDataGraph page to display hourly averages with multiple interpolation options. Updated NavMenu to include the new page and adjusted the titles for existing links to better reflect their content.

--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -5,9 +5,9 @@
     <MudNavLink Href="weather" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Weather</MudNavLink>*@
     <MudNavGroup Title="Thresholds" Icon="@Icons.Material.Filled.TableView">
         @*<MudNavLink Href="thresholds" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.TableView">API Hist Details</MudNavLink>*@
-        <MudNavLink Href="CollectedDataGrid" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.TableView">Data Table Example</MudNavLink>
+        <MudNavLink Href="CollectedDataGrid" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.TableView">Detail Data Table Example</MudNavLink>
         @*<MudNavLink Href="DataGridExample" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.TableView">Data Grid Exammple</MudNavLink>*@
-        <MudNavLink Href="Graphs" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.MultilineChart">Charting</MudNavLink>
+        <MudNavLink Href="CollectedDataGraph" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.MultilineChart">Hourly Avg Graph Example</MudNavLink>
     </MudNavGroup>
     <MudNavGroup Title="Running" Icon="@Icons.Material.Filled.AlarmOn">
         <MudNavLink Href="onoff" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.AlarmOn">Health Hist Details</MudNavLink>
