--- a/Components/Pages/CollectedDataGraph.razor
+++ b/Components/Pages/CollectedDataGraph.razor
@@ -6,7 +6,7 @@
 
 <div>
     <MudChart ChartType="ChartType.Line" ChartSeries="@Series"
-              XAxisLabels="@XAxisLabels" Width="100%" Height="600" ChartOptions="options"
+              XAxisLabels="@XAxisLabels" Width="100%" Height="750" ChartOptions="options"
               CanHideSeries="true"></MudChart>
     <MudMenu Label="Interpolation Algorithm" FullWidth="true">
         <MudMenuItem OnClick="() => OnClickMenu(InterpolationOption.Straight)">Straight</MudMenuItem>
@@ -17,11 +17,12 @@
 </div>
 
 @code {
-    public List<TycherosMonitoringService.AverageHourlyApiResult> _averages = new ();
+    private List<TycherosMonitoringService.AverageHourlyApiResult> _averages = new ();
 
     private ChartOptions options = new ();
-    public List<ChartSeries> Series = new ();
-    public string[] XAxisLabels = { "1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24" };
+    private List<ChartSeries> Series = new ();
+    private string[] XAxisLabels = {"1", "2", "3", "4", "5", "6", "7", "8", "9", "10",
+        "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24" };
 
     void OnClickMenu(InterpolationOption interpolationOption)
     {
@@ -35,10 +36,11 @@
         var dateAvg = _averages.Where(x => x.Date == DateTime.Today);
         Series = new List<ChartSeries>()
             {
-                new () { Name = "CheckOrders", Data = new double[25] },
-                new () { Name = "CheckLogings", Data = new double[25]  },
-                new () { Name = "CheckRegistrations", Data = new double[25] },
+                new () { Name = "CheckOrders", Data = new double[24] },
+                new () { Name = "CheckLogings", Data = new double[24]  },
+                new () { Name = "CheckRegistrations", Data = new double[24] },
             };
+
         foreach (var rec in dateAvg)
         {
             if (rec.ApiName == "CheckOrders")
@@ -56,12 +58,12 @@
         }
 
         options.InterpolationOption = InterpolationOption.Straight;
-        // options.YAxisFormat = "c2";
         options.YAxisTicks = 100;
         options.YAxisLines = true;
         options.YAxisRequireZeroPoint = true;
         options.MaxNumYAxisTicks = 15;
         options.LineStrokeWidth = 1;
+        options.XAxisLines = true;
 
     }
 
