Add UTC date format and new time series graph
Updated CollectedDataGraph to use UTC date format and added new ColletedTimeSeriesGraph page. Enhanced navigation menu and implemented selection change for CollectedDataGraph.

--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,13 +1,12 @@
-﻿
+﻿@inject NavigationManager Navigation
+
 <MudNavMenu>
     <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
-    @*<MudNavLink Href="fetchdata" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Fetch DB Data</MudNavLink>
-    <MudNavLink Href="weather" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Weather</MudNavLink>*@
     <MudNavGroup Title="Thresholds" Icon="@Icons.Material.Filled.TableView">
         @*<MudNavLink Href="thresholds" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.TableView">API Hist Details</MudNavLink>*@
         <MudNavLink Href="CollectedDataGrid" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.TableView">Detail Data Table Example</MudNavLink>
-        @*<MudNavLink Href="DataGridExample" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.TableView">Data Grid Exammple</MudNavLink>*@
         <MudNavLink Href="CollectedDataGraph" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.MultilineChart">Hourly Avg Graph Example</MudNavLink>
+        <MudNavLink Href="ColletedTimeSeriesGraph" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.TableView">Time Series Grap</MudNavLink>
     </MudNavGroup>
     <MudNavGroup Title="Running" Icon="@Icons.Material.Filled.AlarmOn">
         <MudNavLink Href="onoff" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.AlarmOn">Health Hist Details</MudNavLink>
